--- a/src/app/single-movie/single-movie.component.html
+++ b/src/app/single-movie/single-movie.component.html
@@ -219,6 +219,11 @@
             <p class="singleMovie__crew__list__members__unique__card__name">
               {{ movieCast.name }}
             </p>
+            <p
+              class="singleMovie__crew__list__members__unique__card__character"
+            >
+              {{ movieCast.character }}
+            </p>
           </div>
         </div>
       </div>
