--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,4 +1,5 @@
 @import "../../variables";
+@import "../../mixins";
 
 .contact {
   width: 100%;
@@ -6,6 +7,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  @include smalldesk {
+    padding: 12% 0;
+  }
   &__message {
     width: 95%;
     display: flex;
@@ -19,6 +23,10 @@
       text-align: center;
       text-decoration: underline;
       margin-bottom: 0.5em;
+      @include smalldesk {
+        font-size: 48px;
+        font-weight: 700;
+      }
     }
     p {
       font-size: 22px;
@@ -30,6 +38,9 @@
           cursor: pointer;
           text-decoration: underline;
         }
+      }
+      @include smalldesk {
+        font-size: 20px;
       }
     }
   }
@@ -51,6 +62,9 @@
       i {
         color: $primaryColor;
         font-size: 48px;
+        @include smalldesk {
+          font-size: 42px;
+        }
       }
       a {
         text-decoration: none;
@@ -59,6 +73,9 @@
         position: relative;
         transition: all 100ms;
         transform: scale(1);
+        @include smalldesk {
+          font-size: 22px;
+        }
         &::before {
           pointer-events: none;
           content: "";
@@ -66,7 +83,7 @@
           top: 130%;
           left: 0;
           width: 100%;
-          height: 50%;
+          height: 30%;
           transition: all 100ms linear;
           opacity: 0;
           background: linear-gradient(
