--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,5 @@
 @import "../../variables";
+@import "../../mixins";
 
 header {
   width: 100%;
@@ -39,6 +40,9 @@ header {
       font-size: 24px;
       font-weight: 600;
       margin-bottom: 5px;
+      @include smalldesk {
+        font-size: 20px;
+      }
     }
   }
 
@@ -72,6 +76,9 @@ header {
       -ms-flex-pack: distribute;
       justify-content: space-around;
       list-style-type: none;
+      @include smalldesk {
+        font-size: 20px;
+      }
       padding: 0;
       &__unique {
         font-family: "Bungee", cursive;
@@ -103,6 +110,9 @@ header {
           i {
             font-size: 36px;
             margin-right: 10px;
+            @include smalldesk {
+              font-size: 32px;
+            }
           }
           &:hover {
             cursor: pointer;
