--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,4 +1,5 @@
 @import "../../variables";
+@import "../../mixins";
 
 .home {
   width: 100%;
@@ -39,6 +40,12 @@
       color: $primaryColor;
       font-size: 34px;
     }
+    @include smalldesk {
+      width: 33%;
+      h1 {
+        font-size: 22px;
+      }
+    }
   }
   &__welcomeMessage {
     width: 90%;
@@ -49,6 +56,9 @@
       font-size: 22px;
       text-align: justify;
       margin-bottom: 10px;
+      @include smalldesk {
+        font-size: 18px;
+      }
     }
     i {
       color: $primaryColor;
@@ -64,6 +74,9 @@
       gap: 5em;
       margin-top: 30px;
       margin-bottom: 50px;
+      @include smalldesk {
+        margin-bottom: 25px;
+      }
       &__unique {
         position: relative;
         i {
@@ -73,11 +86,17 @@
           align-items: center;
           transform: scale(1);
           transition: all 150ms ease-out;
+          @include smalldesk {
+            font-size: 36px;
+          }
 
           p {
             margin-top: 10px;
             font-size: 22px;
             color: $primaryColor;
+            @include smalldesk {
+              font-size: 18px;
+            }
           }
         }
         &:hover {
@@ -137,6 +156,9 @@
       font-size: 40px;
       font-family: "Bungee", cursive;
       border-bottom: 2px solid $primaryColor;
+      @include smalldesk {
+        font-size: 36px;
+      }
     }
     &__content {
       width: 100%;
@@ -188,6 +210,9 @@
               transform: scale(1.01);
               transform-origin: top;
               transition: all 400ms ease-in-out;
+              @include smalldesk {
+                transform: scale(1.03);
+              }
             }
           }
         }
