--- a/src/app/view-image/view-image.component.scss
+++ b/src/app/view-image/view-image.component.scss
@@ -1,4 +1,5 @@
 @import "../../variables";
+@import "../../mixins";
 
 .fullImage {
   width: 100%;
@@ -7,6 +8,9 @@
   justify-content: space-around;
   align-items: center;
   padding: 10% 0;
+  @include smalldesk {
+    padding: 12% 0;
+  }
   &__buttons {
     align-self: flex-start;
     margin-top: 10%;
@@ -29,6 +33,10 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      transform: scale(1);
+      @include smalldesk {
+        transform: scale(0.8);
+      }
       i {
         font-size: 32px;
         transform: scale(1);
