--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,15 +20,15 @@ body {
   scrollbar-color: $primaryColor $backgroundColor;
   // Webkit custom scrollbar
   &::-webkit-scrollbar {
-    width: 15px;
+    width: 10px;
   }
   &::-webkit-scrollbar-track {
-    background: $backgroundColor;
+    background: $primaryColor;
   }
   &::-webkit-scrollbar-thumb {
     background-color: $backgroundColor;
     border: 3px solid $primaryColor;
-    -webkit-box-shadow: inset 0 0 5px $primaryColor;
+    -webkit-box-shadow: inset 0 0 2px $primaryColor;
     box-shadow: inset 0 0 5px $primaryColor;
   }
 }
