--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,8 @@
     <!-- Navigation links -->
     <ul class="navmenu__list">
       <li class="navmenu__list__unique" (click)="onHomePage()">
-        <i class="fa-solid fa-ticket"></i>ACCUEIL
+        <i class="fa-solid fa-ticket"></i>
+        <p>ACCUEIL</p>
       </li>
       <li class="navmenu__list__unique__big" (click)="onDiscover()">
         <i class="fa-solid fa-circle-question"></i>
@@ -22,7 +23,8 @@
         <i class="fa-solid fa-magnifying-glass"></i>
       </li>
       <li class="navmenu__list__unique" (click)="onContact()">
-        <i class="fa-solid fa-envelope"></i>CONTACT
+        <i class="fa-solid fa-envelope"></i>
+        <p>CONTACT</p>
       </li>
     </ul>
   </nav>
