--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -41,7 +41,10 @@
           <p>Découvrir un autre film</p>
         </div>
         <!-- Access to the homepage -->
-        <div class="landing-page__randomMovie__description__buttons__unique">
+        <div
+          class="landing-page__randomMovie__description__buttons__unique"
+          (click)="onGoHome()"
+        >
           <i class="fa-solid fa-house-chimney-window"></i>
           <p>Accueil</p>
         </div>
