--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -43,6 +43,10 @@ header {
       @include smalldesk {
         font-size: 20px;
       }
+      @include lores {
+        font-size: 16px;
+        font-weight: 500;
+      }
     }
   }
 
@@ -79,9 +83,11 @@ header {
       @include smalldesk {
         font-size: 20px;
       }
+      @include lores {
+        font-size: 16px;
+      }
       padding: 0;
       &__unique {
-        font-family: "Bungee", cursive;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -101,9 +107,23 @@ header {
         -webkit-transition: all 150ms ease-out;
         -o-transition: all 150ms ease-out;
         transition: all 150ms ease-out;
+        position: relative;
         i {
           font-size: 20px;
           margin-right: 10px;
+          @include lores {
+            font-size: 18px;
+          }
+        }
+        p {
+          font-family: "Bungee", cursive;
+          font-size: 24px;
+          @include smalldesk {
+            font-size: 20px;
+          }
+          @include lores {
+            font-size: 18px;
+          }
         }
         &__big {
           transition: all 150ms ease-out;
@@ -113,11 +133,17 @@ header {
             @include smalldesk {
               font-size: 32px;
             }
+            @include lores {
+              font-size: 24px;
+            }
           }
           &:hover {
             cursor: pointer;
             text-shadow: 0 0 25px $primaryColor, 0 0 3px $secondaryColor;
             transform: scale(1.1);
+            @include lores {
+              text-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
+            }
             i {
               transform: scale(1.1);
             }
@@ -148,8 +174,8 @@ header {
           cursor: pointer;
           text-shadow: 0 0 25px $primaryColor, 0 0 3px $secondaryColor;
           transform: scale(1.1);
-          i {
-            transform: scale(1.1);
+          @include lores {
+            text-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
           }
           &::before {
             opacity: 1;
