--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -17,6 +17,9 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  @include lores {
+    padding: 12% 0;
+  }
   &__logo {
     width: 40%;
     display: -webkit-box;
@@ -41,15 +44,22 @@
       font-size: 34px;
     }
     @include smalldesk {
-      width: 33%;
       h1 {
-        font-size: 22px;
+        font-size: 28px;
+      }
+    }
+    @include lores {
+      h1 {
+        font-size: 20px;
       }
     }
   }
   &__welcomeMessage {
     width: 90%;
     margin-bottom: 25px;
+    @include lores {
+      width: 95%;
+    }
     p {
       width: 100%;
       color: white;
@@ -58,6 +68,9 @@
       margin-bottom: 10px;
       @include smalldesk {
         font-size: 18px;
+      }
+      @include lores {
+        font-size: 16px;
       }
     }
     i {
@@ -77,6 +90,9 @@
       @include smalldesk {
         margin-bottom: 25px;
       }
+      @include lores {
+        margin-bottom: 30px;
+      }
       &__unique {
         position: relative;
         i {
@@ -89,6 +105,9 @@
           @include smalldesk {
             font-size: 36px;
           }
+          @include lores {
+            font-size: 36px;
+          }
 
           p {
             margin-top: 10px;
@@ -96,6 +115,9 @@
             color: $primaryColor;
             @include smalldesk {
               font-size: 18px;
+            }
+            @include lores {
+              font-size: 16px;
             }
           }
         }
@@ -159,6 +181,10 @@
       @include smalldesk {
         font-size: 36px;
       }
+      @include lores {
+        font-size: 32px;
+        align-self: center;
+      }
     }
     &__content {
       width: 100%;
@@ -168,6 +194,10 @@
       justify-content: center;
       align-items: center;
       background-color: $primaryColor;
+      @include lores {
+        margin: 15px 0 50px;
+        padding: 1em;
+      }
       &__bar {
         width: 100%;
         height: 1em;
@@ -176,6 +206,9 @@
         &:last-child {
           margin: 0 0 5px 0;
         }
+        @include lores {
+          display: none;
+        }
       }
       &__list {
         width: 100%;
@@ -183,6 +216,13 @@
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
+        @include lores {
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          grid-template-rows: repeat(3, 1fr);
+          grid-column-gap: 0px;
+          grid-row-gap: 0px;
+        }
         &__unique {
           display: flex;
           flex-direction: column;
@@ -192,6 +232,11 @@
           border-right: solid 1em $backgroundColor;
           border-left: solid 1em $backgroundColor;
           position: relative;
+          @include lores {
+            width: 100%;
+            border-right: none;
+            border-left: none;
+          }
           &__poster {
             display: flex;
             flex-direction: column;
@@ -210,9 +255,6 @@
               transform: scale(1.01);
               transform-origin: top;
               transition: all 400ms ease-in-out;
-              @include smalldesk {
-                transform: scale(1.03);
-              }
             }
           }
         }
