--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -7,6 +7,9 @@
   @include smalldesk {
     padding: 15% 0;
   }
+  @include lores {
+    padding: 18% 0;
+  }
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -33,6 +36,9 @@
     padding: 0 75px;
     position: relative;
     overflow: hidden;
+    @include lores {
+      padding: 0 50px;
+    }
     &__leftPick {
       position: absolute;
       top: 25%;
@@ -41,6 +47,9 @@
       border-radius: 50%;
       width: 100px;
       height: 50%;
+      @include lores {
+        width: 85px;
+      }
     }
     &__rightPick {
       position: absolute;
@@ -50,6 +59,9 @@
       border-radius: 50%;
       width: 100px;
       height: 50%;
+      @include lores {
+        width: 85px;
+      }
     }
     &__poster {
       width: 25%;
@@ -71,6 +83,9 @@
       &__image {
         width: 100%;
       }
+      @include lores {
+        width: 33%;
+      }
     }
     &__description {
       width: 75%;
@@ -87,13 +102,22 @@
       -webkit-box-align: center;
       -ms-flex-align: center;
       align-items: center;
+      @include lores {
+        width: 66%;
+      }
       &__title {
         width: 100%;
         color: $backgroundColor;
         font-size: 66px;
+        font-weight: 800;
         text-align: center;
         @include smalldesk {
           font-size: 58px;
+          font-weight: 700;
+        }
+        @include lores {
+          font-size: 36px;
+          font-weight: 700;
         }
       }
       &__date {
@@ -103,6 +127,9 @@
         text-align: center;
         @include smalldesk {
           font-size: 36px;
+        }
+        @include lores {
+          font-size: 28px;
         }
       }
       &__buttons {
@@ -128,6 +155,9 @@
           transform: scale(1);
           @include smalldesk {
             transform: scale(0.75);
+          }
+          @include lores {
+            transform: scale(0.66);
           }
           display: -webkit-box;
           display: -ms-flexbox;
@@ -181,6 +211,10 @@
             -webkit-transition: all 150ms linear;
             -o-transition: all 150ms linear;
             transition: all 150ms linear;
+            @include lores {
+              font-size: 16px;
+              font-weight: 500;
+            }
           }
         }
       }
