--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -7,6 +7,9 @@
   @include smalldesk {
     padding: 12% 0;
   }
+  @include lores {
+    padding: 15% 0;
+  }
   color: $primaryColor;
   display: flex;
   flex-direction: column;
@@ -25,6 +28,10 @@
       justify-content: space-around;
       align-items: center;
       padding: 5px 0 15px 0;
+      @include lores {
+        flex-direction: column;
+        padding: 15px 0 20px 0;
+      }
       legend {
         font-size: 24px;
         font-weight: 800;
@@ -33,12 +40,19 @@
           font-size: 22px;
           font-weight: 700;
         }
+        @include lores {
+          font-size: 20px;
+          font-weight: 600;
+        }
       }
       &__radio {
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        @include lores {
+          width: 50%;
+        }
         input {
           appearance: none;
           width: 2em;
@@ -56,6 +70,9 @@
             @include smalldesk {
               box-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
             }
+            @include lores {
+              box-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
+            }
           }
           &:hover {
             cursor: pointer;
@@ -64,9 +81,25 @@
         label {
           font-size: 22px;
           font-weight: 700;
+          @include smalldesk {
+            font-size: 20px;
+            font-weight: 500;
+          }
+          @include lores {
+            font-size: 18px;
+            font-weight: 500;
+          }
+        }
+        &__movieLabel {
+          font-size: 22px;
+          font-weight: 700;
           margin-right: 2em;
           @include smalldesk {
             font-size: 20px;
+            font-weight: 500;
+          }
+          @include lores {
+            font-size: 18px;
             font-weight: 500;
           }
         }
@@ -89,6 +122,11 @@
           width: 40%;
           font-size: 20px;
         }
+        @include lores {
+          width: 90%;
+          font-size: 20px;
+          margin: 25px 0;
+        }
         &:focus,
         &:active {
           appearance: none;
@@ -96,6 +134,9 @@
           outline: none;
           box-shadow: 0 0 25px $primaryColor, 0 0 3px $secondaryColor;
           @include smalldesk {
+            box-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
+          }
+          @include lores {
             box-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
           }
         }
@@ -122,6 +163,9 @@
           @include smalldesk {
             box-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
           }
+          @include lores {
+            box-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
+          }
         }
       }
     }
@@ -137,12 +181,19 @@
     @include smalldesk {
       margin-top: 50px;
     }
+    @include lores {
+      margin-top: 50px;
+    }
     &__none {
       color: $primaryColor;
       font-size: 42px;
       font-weight: 800;
       text-align: center;
       @include smalldesk {
+        font-size: 36px;
+        font-weight: 700;
+      }
+      @include lores {
         font-size: 36px;
         font-weight: 700;
       }
@@ -156,6 +207,9 @@
       align-items: center;
       @include smalldesk {
         width: 90%;
+      }
+      @include lores {
+        width: 100%;
       }
       &__list {
         width: 100%;
@@ -183,7 +237,11 @@
               transform: scale(1.25);
             }
             .search__results__people__list__unique__title__movies {
+              width: 30%;
               transform: translateX(0%);
+              @include lores {
+                width: 50%;
+              }
               img {
                 transform: scale(1);
               }
@@ -197,6 +255,9 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            @include lores {
+              width: 20%;
+            }
             img {
               width: 100%;
               transform-origin: top;
@@ -226,8 +287,12 @@
                 font-size: 32px;
                 font-weight: 700;
               }
+              @include lores {
+                font-size: 28px;
+                font-weight: 600;
+              }
             }
-            p:last-child {
+            p:nth-child(2) {
               width: 15%;
               margin: 1em 0;
               font-size: 32px;
@@ -238,9 +303,13 @@
                 font-size: 28px;
                 font-weight: 500;
               }
+              @include lores {
+                font-size: 26px;
+                font-weight: 500;
+              }
             }
             &__movies {
-              width: 30%;
+              width: 0;
               display: flex;
               flex-direction: row;
               justify-content: center;
