Responsive: desktop, smalldesk, lores/tablet => 100%. Mobile & xsmobile 75%.

--- a/src/_keyframes.scss
+++ b/src/_keyframes.scss
@@ -69,3 +69,12 @@
     opacity: 1;
   }
 }
+
+@keyframes headerSlide {
+  from {
+    transform: translateY(-100vh);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
