--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -38,7 +38,7 @@
           (click)="onDiscover()"
         >
           <i class="fa-solid fa-clipboard-question"></i>
-          <p>Découvrir un autre film</p>
+          <p>Surprenez moi!</p>
         </div>
         <!-- Access to the homepage -->
         <div
