--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -143,7 +143,7 @@
             <p>{{ people.name }}</p>
             <div
               class="search__results__people__list__unique__title__movies"
-              *ngIf="people.known_for[0].poster_path"
+              *ngIf="people.known_for"
             >
               <div
                 class="search__results__people__list__unique__title__movies__unique"
