--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,67 @@
 @import "../../variables";
 @import "../../mixins";
 
+.burger {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  background-color: $backgroundColor;
+  top: 0;
+  left: 0;
+  z-index: 15;
+  border: 2px solid $primaryColor;
+  border-radius: 0.5em;
+  width: 2.5em;
+  height: 2.5em;
+  margin: 0.6em;
+  @include mobile {
+    display: flex;
+  }
+  @include xsmobile {
+    display: flex;
+  }
+  &:hover {
+    cursor: pointer;
+  }
+  &__button {
+    width: 66%;
+    height: 66%;
+    position: relative;
+    overflow: hidden;
+    &__bar {
+      width: 100%;
+      height: 15%;
+      background-color: $primaryColor;
+      border-radius: 3em;
+      position: absolute;
+      transition: all 300ms linear;
+      &:nth-child(1) {
+        top: 0;
+      }
+      &:nth-child(2) {
+        top: 42.5%;
+        background-color: $secondaryColor;
+      }
+      &:nth-child(3) {
+        bottom: 0;
+      }
+    }
+    &__arrows {
+      width: 100%;
+      height: 70%;
+      color: $primaryColor;
+      text-align: center;
+      position: absolute;
+      top: -125%;
+      transition: all 300ms linear;
+      .activeArrows {
+        top: 0;
+      }
+    }
+  }
+}
 header {
   width: 100%;
   display: -webkit-box;
@@ -19,7 +80,29 @@ header {
   box-shadow: 0px 3px 15px 2px $primaryColor;
   overflow: hidden;
   z-index: 10;
-
+  transition: all 300ms linear;
+  @include mobile {
+    width: 100vw;
+    height: 100vh;
+    transform: translateY(-100vh) translateX(-100vw);
+    transition: all 300ms linear;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 15%;
+    box-shadow: none;
+  }
+  @include xsmobile {
+    width: 100vw;
+    height: 100vh;
+    transform: translateY(-100vh) translateX(-100vw);
+    transition: all 300ms linear;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 18%;
+    box-shadow: none;
+  }
   .logo {
     width: 33%;
     display: -webkit-box;
@@ -35,6 +118,12 @@ header {
     &__image {
       width: 100%;
     }
+    @include mobile {
+      width: 90%;
+    }
+    @include xsmobile {
+      width: 90%;
+    }
     h2 {
       color: $primaryColor;
       font-size: 24px;
@@ -45,6 +134,13 @@ header {
       }
       @include lores {
         font-size: 16px;
+        font-weight: 500;
+      }
+      @include mobile {
+        font-size: 22px;
+      }
+      @include xsmobile {
+        font-size: 18px;
         font-weight: 500;
       }
     }
@@ -66,6 +162,14 @@ header {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    @include mobile {
+      width: 90%;
+      height: 100%;
+    }
+    @include xsmobile {
+      width: 90%;
+      height: 100%;
+    }
     &__list {
       width: 100%;
       color: $primaryColor;
@@ -85,6 +189,16 @@ header {
       }
       @include lores {
         font-size: 16px;
+      }
+      @include mobile {
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
+      }
+      @include xsmobile {
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
       }
       padding: 0;
       &__unique {
@@ -144,6 +258,12 @@ header {
             @include lores {
               text-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
             }
+            @include mobile {
+              text-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
+            }
+            @include xsmobile {
+              text-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
+            }
             i {
               transform: scale(1.1);
             }
@@ -175,6 +295,12 @@ header {
           text-shadow: 0 0 25px $primaryColor, 0 0 3px $secondaryColor;
           transform: scale(1.1);
           @include lores {
+            text-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
+          }
+          @include mobile {
+            text-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
+          }
+          @include mobile {
             text-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
           }
           &::before {
