--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -20,6 +20,12 @@
   @include lores {
     padding: 12% 0;
   }
+  @include mobile {
+    padding: 15% 0;
+  }
+  @include xsmobile {
+    padding: 18% 0;
+  }
   &__logo {
     width: 40%;
     display: -webkit-box;
@@ -36,6 +42,12 @@
     -ms-flex-align: center;
     align-items: center;
     margin-bottom: 25px;
+    @include mobile {
+      width: 75%;
+    }
+    @include xsmobile {
+      width: 75%;
+    }
     img {
       width: 100%;
     }
@@ -53,11 +65,27 @@
         font-size: 20px;
       }
     }
+    @include mobile {
+      h1 {
+        font-size: 18px;
+      }
+    }
+    @include xsmobile {
+      h1 {
+        font-size: 16px;
+      }
+    }
   }
   &__welcomeMessage {
     width: 90%;
     margin-bottom: 25px;
     @include lores {
+      width: 95%;
+    }
+    @include mobile {
+      width: 95%;
+    }
+    @include xsmobile {
       width: 95%;
     }
     p {
@@ -70,6 +98,12 @@
         font-size: 18px;
       }
       @include lores {
+        font-size: 16px;
+      }
+      @include mobile {
+        font-size: 16px;
+      }
+      @include xsmobile {
         font-size: 16px;
       }
     }
@@ -93,6 +127,14 @@
       @include lores {
         margin-bottom: 30px;
       }
+      @include mobile {
+        margin-bottom: 30px;
+        gap: 3em;
+      }
+      @include xsmobile {
+        margin-bottom: 30px;
+        gap: 2em;
+      }
       &__unique {
         position: relative;
         i {
@@ -108,6 +150,12 @@
           @include lores {
             font-size: 36px;
           }
+          @include mobile {
+            font-size: 32px;
+          }
+          @include xsmobile {
+            font-size: 28px;
+          }
 
           p {
             margin-top: 10px;
@@ -119,14 +167,34 @@
             @include lores {
               font-size: 16px;
             }
+            @include mobile {
+              font-size: 16px;
+            }
+            @include xsmobile {
+              font-size: 16px;
+            }
           }
         }
         &:hover {
           cursor: pointer;
           text-shadow: 0 0 25px $primaryColor, 0 0 3px $secondaryColor;
           transform: scale(1.1);
+          @include mobile {
+            transform: scale(1.05);
+            text-shadow: 0 0 15px $primaryColor, 0 0 3px $secondaryColor;
+          }
+          @include xsmobile {
+            transform: scale(1.03);
+            text-shadow: 0 0 15px $primaryColor, 0 0 3px $secondaryColor;
+          }
           i {
             transform: scale(1.1);
+            @include mobile {
+              transform: scale(1.05);
+            }
+            @include xsmobile {
+              transform: scale(1.03);
+            }
           }
           &::before {
             opacity: 1;
@@ -185,6 +253,18 @@
         font-size: 32px;
         align-self: center;
       }
+      @include mobile {
+        width: 100%;
+        font-size: 28px;
+        align-self: center;
+        text-align: center;
+      }
+      @include xsmobile {
+        width: 100%;
+        font-size: 24px;
+        align-self: center;
+        text-align: center;
+      }
     }
     &__content {
       width: 100%;
@@ -198,6 +278,14 @@
         margin: 15px 0 50px;
         padding: 1em;
       }
+      @include mobile {
+        margin: 15px 0 50px;
+        padding: 1em;
+      }
+      @include xsmobile {
+        margin: 15px 0 50px;
+        padding: 1em;
+      }
       &__bar {
         width: 100%;
         height: 1em;
@@ -207,6 +295,12 @@
           margin: 0 0 5px 0;
         }
         @include lores {
+          display: none;
+        }
+        @include mobile {
+          display: none;
+        }
+        @include xsmobile {
           display: none;
         }
       }
@@ -223,6 +317,20 @@
           grid-column-gap: 0px;
           grid-row-gap: 0px;
         }
+        @include mobile {
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          grid-template-rows: repeat(3, 1fr);
+          grid-column-gap: 0px;
+          grid-row-gap: 0px;
+        }
+        @include xsmobile {
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          grid-template-rows: repeat(3, 1fr);
+          grid-column-gap: 0px;
+          grid-row-gap: 0px;
+        }
         &__unique {
           display: flex;
           flex-direction: column;
@@ -233,6 +341,16 @@
           border-left: solid 1em $backgroundColor;
           position: relative;
           @include lores {
+            width: 100%;
+            border-right: none;
+            border-left: none;
+          }
+          @include mobile {
+            width: 100%;
+            border-right: none;
+            border-left: none;
+          }
+          @include xsmobile {
             width: 100%;
             border-right: none;
             border-left: none;
