--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -3,12 +3,18 @@
 
 .landing-page {
   width: 100%;
-  padding: 10% 0;
+  padding: 10% 0 0 0;
   @include smalldesk {
     padding: 15% 0;
   }
   @include lores {
     padding: 18% 0;
+  }
+  @include mobile {
+    padding: 18% 0;
+  }
+  @include xsmobile {
+    padding: 20% 0;
   }
   display: -webkit-box;
   display: -ms-flexbox;
@@ -39,6 +45,16 @@
     @include lores {
       padding: 0 50px;
     }
+    @include mobile {
+      padding: 40px 0;
+      flex-direction: column;
+      align-items: center;
+    }
+    @include xsmobile {
+      padding: 40px 0;
+      flex-direction: column;
+      align-items: center;
+    }
     &__leftPick {
       position: absolute;
       top: 25%;
@@ -49,6 +65,20 @@
       height: 50%;
       @include lores {
         width: 85px;
+      }
+      @include mobile {
+        width: 90px;
+        height: 35%;
+        transform: rotate(90deg);
+        top: -20%;
+        left: 39%;
+      }
+      @include xsmobile {
+        width: 90px;
+        height: 35%;
+        transform: rotate(90deg);
+        top: -20%;
+        left: 39%;
       }
     }
     &__rightPick {
@@ -61,6 +91,20 @@
       height: 50%;
       @include lores {
         width: 85px;
+      }
+      @include mobile {
+        width: 90px;
+        height: 35%;
+        transform: rotate(-90deg);
+        top: 85%;
+        left: 39%;
+      }
+      @include xsmobile {
+        width: 90px;
+        height: 35%;
+        transform: rotate(-90deg);
+        top: 85%;
+        left: 39%;
       }
     }
     &__poster {
@@ -86,6 +130,14 @@
       @include lores {
         width: 33%;
       }
+      @include mobile {
+        width: 66%;
+        border-right: none;
+      }
+      @include xsmobile {
+        width: 66%;
+        border-right: none;
+      }
     }
     &__description {
       width: 75%;
@@ -105,6 +157,12 @@
       @include lores {
         width: 66%;
       }
+      @include mobile {
+        width: 95%;
+      }
+      @include xsmobile {
+        width: 95%;
+      }
       &__title {
         width: 100%;
         color: $backgroundColor;
@@ -119,6 +177,14 @@
           font-size: 36px;
           font-weight: 700;
         }
+        @include mobile {
+          font-size: 32px;
+          font-weight: 700;
+        }
+        @include xsmobile {
+          font-size: 30px;
+          font-weight: 600;
+        }
       }
       &__date {
         width: 100%;
@@ -130,6 +196,14 @@
         }
         @include lores {
           font-size: 28px;
+        }
+        @include mobile {
+          font-size: 22px;
+          font-weight: 500;
+        }
+        @include xsmobile {
+          font-size: 20px;
+          font-weight: 500;
         }
       }
       &__buttons {
@@ -159,6 +233,16 @@
           @include lores {
             transform: scale(0.66);
           }
+          @include mobile {
+            width: 100px;
+            height: 120px;
+            margin-top: 5%;
+          }
+          @include xsmobile {
+            width: 100px;
+            height: 120px;
+            margin-top: 5%;
+          }
           display: -webkit-box;
           display: -ms-flexbox;
           display: flex;
@@ -187,10 +271,24 @@
               -ms-transform: translateY(5px) scale(1.1);
               transform: translateY(5px) scale(1.1);
               text-shadow: 0 0 10px $primaryColor;
+              @include mobile {
+                transform: translateY(3px) scale(1.07);
+                text-shadow: 0 0 7px $primaryColor;
+              }
+              @include xsmobile {
+                transform: translateY(3px) scale(1.07);
+                text-shadow: 0 0 7px $primaryColor;
+              }
             }
             p {
               text-shadow: 0 0 25px $primaryColor;
               color: $primaryColor;
+              @include mobile {
+                text-shadow: 0 0 15px $primaryColor;
+              }
+              @include xsmobile {
+                text-shadow: 0 0 15px $primaryColor;
+              }
             }
           }
           i {
@@ -202,6 +300,12 @@
             -webkit-transition: all 150ms linear;
             -o-transition: all 150ms linear;
             transition: all 150ms linear;
+            @include mobile {
+              font-size: 36px;
+            }
+            @include xsmobile {
+              font-size: 34px;
+            }
           }
           p {
             text-align: center;
@@ -211,9 +315,18 @@
             -webkit-transition: all 150ms linear;
             -o-transition: all 150ms linear;
             transition: all 150ms linear;
+            padding: 2px;
             @include lores {
               font-size: 16px;
               font-weight: 500;
+            }
+            @include mobile {
+              font-size: 14px;
+              font-weight: 500;
+            }
+            @include xsmobile {
+              font-size: 12px;
+              font-weight: 400;
             }
           }
         }
