--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -10,6 +10,12 @@
   @include lores {
     padding: 15% 0;
   }
+  @include mobile {
+    padding: 18% 0 25% 0;
+  }
+  @include xsmobile {
+    padding: 18% 0 25% 0;
+  }
   color: $primaryColor;
   display: flex;
   flex-direction: column;
@@ -32,6 +38,14 @@
         flex-direction: column;
         padding: 15px 0 20px 0;
       }
+      @include mobile {
+        flex-direction: column;
+        padding: 15px 0 20px 0;
+      }
+      @include xsmobile {
+        flex-direction: column;
+        padding: 15px 0 20px 0;
+      }
       legend {
         font-size: 24px;
         font-weight: 800;
@@ -44,6 +58,16 @@
           font-size: 20px;
           font-weight: 600;
         }
+        @include mobile {
+          font-size: 18px;
+          font-weight: 600;
+          margin-right: 1em;
+        }
+        @include xsmobile {
+          font-size: 16px;
+          font-weight: 500;
+          margin-right: 1em;
+        }
       }
       &__radio {
         display: flex;
@@ -51,7 +75,7 @@
         justify-content: center;
         align-items: center;
         @include lores {
-          width: 50%;
+          width: 100%;
         }
         input {
           appearance: none;
@@ -64,6 +88,16 @@
           justify-content: center;
           margin-right: 1em;
           transition: all 100ms ease-in-out;
+          @include mobile {
+            width: 1em;
+            height: 1em;
+            border: 0.2em solid $primaryColor;
+          }
+          @include xsmobile {
+            width: 1em;
+            height: 1em;
+            border: 0.2em solid $primaryColor;
+          }
           &:checked {
             border: 0.6em solid $primaryColor;
             box-shadow: 0 0 25px $primaryColor, 0 0 3px $secondaryColor;
@@ -72,6 +106,14 @@
             }
             @include lores {
               box-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
+            }
+            @include mobile {
+              border: 0.35em solid $primaryColor;
+              box-shadow: 0 0 12px $primaryColor, 0 0 2px $secondaryColor;
+            }
+            @include xsmobile {
+              border: 0.35em solid $primaryColor;
+              box-shadow: 0 0 12px $primaryColor, 0 0 2px $secondaryColor;
             }
           }
           &:hover {
@@ -89,19 +131,20 @@
             font-size: 18px;
             font-weight: 500;
           }
+          @include mobile {
+            font-size: 16px;
+            font-weight: 500;
+          }
+          @include xsmobile {
+            font-size: 16px;
+            font-weight: 400;
+          }
+          &:hover {
+            cursor: pointer;
+          }
         }
         &__movieLabel {
-          font-size: 22px;
-          font-weight: 700;
           margin-right: 2em;
-          @include smalldesk {
-            font-size: 20px;
-            font-weight: 500;
-          }
-          @include lores {
-            font-size: 18px;
-            font-weight: 500;
-          }
         }
       }
       &__text {
@@ -127,6 +170,17 @@
           font-size: 20px;
           margin: 25px 0;
         }
+        @include mobile {
+          width: 90%;
+          font-size: 16px;
+          margin: 25px 0;
+        }
+        @include xsmobile {
+          width: 90%;
+          font-size: 16px;
+          font-weight: 400;
+          margin: 25px 0;
+        }
         &:focus,
         &:active {
           appearance: none;
@@ -138,6 +192,12 @@
           }
           @include lores {
             box-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
+          }
+          @include mobile {
+            box-shadow: 0 0 12px $primaryColor, 0 0 2px $secondaryColor;
+          }
+          @include xsmobile {
+            box-shadow: 0 0 12px $primaryColor, 0 0 2px $secondaryColor;
           }
         }
       }
@@ -155,6 +215,14 @@
           font-size: 22px;
           font-weight: 700;
         }
+        @include mobile {
+          font-size: 20px;
+          font-weight: 600;
+        }
+        @include xsmobile {
+          font-size: 20px;
+          font-weight: 600;
+        }
         &:hover {
           cursor: pointer;
           background-color: $primaryColor;
@@ -165,6 +233,12 @@
           }
           @include lores {
             box-shadow: 0 0 15px $primaryColor, 0 0 2px $secondaryColor;
+          }
+          @include mobile {
+            box-shadow: 0 0 12px $primaryColor, 0 0 2px $secondaryColor;
+          }
+          @include xsmobile {
+            box-shadow: 0 0 12px $primaryColor, 0 0 2px $secondaryColor;
           }
         }
       }
@@ -197,6 +271,14 @@
         font-size: 36px;
         font-weight: 700;
       }
+      @include mobile {
+        font-size: 28px;
+        font-weight: 600;
+      }
+      @include xsmobile {
+        font-size: 24px;
+        font-weight: 500;
+      }
     }
     &__movies,
     &__people {
@@ -209,6 +291,12 @@
         width: 90%;
       }
       @include lores {
+        width: 100%;
+      }
+      @include mobile {
+        width: 100%;
+      }
+      @include xsmobile {
         width: 100%;
       }
       &__list {
@@ -226,6 +314,18 @@
           align-items: center;
           background-color: $primaryColor;
           transition: all 150ms ease-in-out;
+          @include mobile {
+            flex-direction: column;
+            border: none;
+            border-top: 2px solid $backgroundColor;
+            border-bottom: 2px solid $backgroundColor;
+          }
+          @include xsmobile {
+            flex-direction: column;
+            border: none;
+            border-top: 2px solid $backgroundColor;
+            border-bottom: 2px solid $backgroundColor;
+          }
           &:hover {
             cursor: pointer;
             background-color: $backgroundColor;
@@ -258,6 +358,14 @@
             @include lores {
               width: 20%;
             }
+            @include mobile {
+              width: 60%;
+              border-right: none;
+            }
+            @include xsmobile {
+              width: 60%;
+              border-right: none;
+            }
             img {
               width: 100%;
               transform-origin: top;
@@ -276,6 +384,14 @@
             align-items: center;
             padding: 0 1em;
             overflow: hidden;
+            @include mobile {
+              flex-direction: column;
+            }
+            @include xsmobile {
+              width: 100%;
+              max-width: 100%;
+              flex-direction: column;
+            }
             p {
               width: 85%;
               font-size: 36px;
@@ -290,6 +406,24 @@
               @include lores {
                 font-size: 28px;
                 font-weight: 600;
+              }
+              @include mobile {
+                width: 100%;
+                font-size: 26px;
+                font-weight: 600;
+                text-align: center;
+                overflow: auto;
+                text-overflow: inherit;
+                white-space: normal;
+              }
+              @include xsmobile {
+                width: 100%;
+                font-size: 24px;
+                font-weight: 500;
+                text-align: center;
+                overflow: auto;
+                text-overflow: inherit;
+                white-space: normal;
               }
             }
             p:nth-child(2) {
@@ -307,6 +441,20 @@
                 font-size: 26px;
                 font-weight: 500;
               }
+              @include mobile {
+                font-size: 24px;
+                font-weight: 500;
+                text-align: center;
+                width: 100%;
+                margin: 0;
+              }
+              @include xsmobile {
+                font-size: 22px;
+                font-weight: 400;
+                text-align: center;
+                width: 100%;
+                margin: 0;
+              }
             }
             &__movies {
               width: 0;
@@ -316,6 +464,12 @@
               align-items: center;
               transition: all 250ms ease-in-out;
               transform: translateX(120%);
+              @include mobile {
+                display: none;
+              }
+              @include xsmobile {
+                display: none;
+              }
               &__unique {
                 width: 30%;
                 img {
@@ -334,16 +488,24 @@
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
+        width: 100%;
+        gap: 0.5em;
         &__prev,
         &__next,
         &__start,
         &__end {
-          margin: 1em 2em;
+          margin: 1em 0;
           font-size: 26px;
           font-weight: 500;
           transform: scale(1);
           transition: all 75ms linear;
           position: relative;
+          @include mobile {
+            margin: 1.5em 0;
+          }
+          @include xsmobile {
+            margin: 1.5em 0;
+          }
           i {
             transform: scale(1);
             transition: all 75ms linear;
@@ -352,6 +514,12 @@
             cursor: pointer;
             text-shadow: 0 0 20px $primaryColor, 0 0 3px $secondaryColor;
             transform: scale(1.1);
+            @include mobile {
+              text-shadow: 0 0 15px $primaryColor, 0 0 3px $secondaryColor;
+            }
+            @include xsmobile {
+              text-shadow: 0 0 15px $primaryColor, 0 0 3px $secondaryColor;
+            }
             i {
               transform: scale(1.1);
             }
@@ -369,6 +537,14 @@
             height: 40%;
             transition: all 75ms linear;
             opacity: 0;
+            @include mobile {
+              height: 30%;
+              top: 120%;
+            }
+            @include xsmobile {
+              height: 30%;
+              top: 120%;
+            }
             background: linear-gradient(
               0deg,
               $primaryColor 50%,
