--- a/src/app/single-movie/single-movie.component.scss
+++ b/src/app/single-movie/single-movie.component.scss
@@ -11,6 +11,12 @@
   @include lores {
     padding: 13% 0;
   }
+  @include mobile {
+    padding: 15% 0 33% 0;
+  }
+  @include xsmobile {
+    padding: 15% 0 33% 0;
+  }
   &__title {
     color: $primaryColor;
     font-size: 80px;
@@ -20,6 +26,12 @@
     }
     @include lores {
       font-size: 60px;
+    }
+    @include mobile {
+      font-size: 52px;
+    }
+    @include xsmobile {
+      font-size: 48px;
     }
   }
   &__subTitle {
@@ -49,6 +61,12 @@
       @include lores {
         font-size: 20px;
       }
+      @include mobile {
+        font-size: 20px;
+      }
+      @include xsmobile {
+        font-size: 18px;
+      }
     }
     span {
       text-indent: 0.5em;
@@ -62,6 +80,12 @@
       }
       @include lores {
         font-size: 20px;
+      }
+      @include mobile {
+        font-size: 20px;
+      }
+      @include xsmobile {
+        font-size: 18px;
       }
     }
   }
@@ -83,6 +107,16 @@
       padding: 70px 0;
       align-items: flex-start;
     }
+    @include mobile {
+      padding: 70px 0;
+      align-items: center;
+      flex-direction: column;
+    }
+    @include xsmobile {
+      padding: 50px 0;
+      align-items: center;
+      flex-direction: column;
+    }
     &__leftPick {
       position: absolute;
       top: 25%;
@@ -97,6 +131,20 @@
         transform: rotate(90deg);
         top: -20%;
         left: 45%;
+      }
+      @include mobile {
+        width: 75px;
+        height: 30%;
+        transform: rotate(90deg);
+        top: -16%;
+        left: 40%;
+      }
+      @include xsmobile {
+        width: 75px;
+        height: 25%;
+        transform: rotate(90deg);
+        top: -13.5%;
+        left: 38%;
       }
     }
     &__rightPick {
@@ -113,6 +161,20 @@
         transform: rotate(-90deg);
         top: 80%;
         left: 45%;
+      }
+      @include mobile {
+        width: 75px;
+        height: 30%;
+        transform: rotate(-90deg);
+        top: 86%;
+        left: 40%;
+      }
+      @include xsmobile {
+        width: 75px;
+        height: 25%;
+        transform: rotate(-90deg);
+        top: 88.5%;
+        left: 38%;
       }
     }
 
@@ -136,6 +198,17 @@
       @include lores {
         width: 40%;
         padding: 0 10px;
+        border-right: dashed 6px $backgroundColor;
+      }
+      @include mobile {
+        width: 66%;
+        padding: 0 10px;
+        border-right: none;
+      }
+      @include xsmobile {
+        width: 70%;
+        padding: 0 10px;
+        border-right: none;
       }
       &__image {
         width: 100%;
@@ -166,6 +239,14 @@
             font-size: 18px;
             margin: 0 5px;
           }
+          @include mobile {
+            font-size: 16px;
+            margin: 0 5px;
+          }
+          @include xsmobile {
+            font-size: 14px;
+            margin: 0 5px;
+          }
           padding: 5px;
         }
       }
@@ -181,6 +262,14 @@
         text-align: justify;
         @include lores {
           font-size: 18px;
+        }
+        @include mobile {
+          font-size: 16px;
+          font-weight: 600;
+        }
+        @include xsmobile {
+          font-size: 14px;
+          font-weight: 500;
         }
       }
       width: 75%;
@@ -198,6 +287,18 @@
       @include lores {
         width: 60%;
         padding: 0 10px;
+      }
+      @include mobile {
+        width: 95%;
+        margin: 0.5em 0;
+        padding: 0.5em 0;
+        border-top: dashed 5px $backgroundColor;
+      }
+      @include xsmobile {
+        width: 95%;
+        margin: 0.5em 0;
+        padding: 0.5em 0;
+        border-top: dashed 5px $backgroundColor;
       }
       &__production {
         width: 100%;
@@ -230,6 +331,7 @@
           align-items: center;
           -ms-flex-pack: distribute;
           justify-content: space-around;
+          margin: 1em 0;
           &__list {
             width: 15%;
             display: -webkit-box;
@@ -239,6 +341,8 @@
             -webkit-box-direction: normal;
             -ms-flex-direction: row;
             flex-direction: row;
+            flex-wrap: wrap;
+            gap: 0.5em;
             -webkit-box-pack: center;
             -ms-flex-pack: center;
             justify-content: center;
@@ -253,7 +357,15 @@
                 font-size: 16px;
               }
               @include lores {
-                font-size: 14px;
+                font-size: 16px;
+              }
+              @include mobile {
+                font-size: 12px;
+                font-weight: 400;
+              }
+              @include xsmobile {
+                font-size: 12px;
+                font-weight: 400;
               }
             }
           }
@@ -278,6 +390,20 @@
           gap: 1em;
           margin-top: 2em;
         }
+        @include mobile {
+          flex-direction: column;
+          justify-content: space-around;
+          align-items: center;
+          gap: 1em;
+          margin-top: 1em;
+        }
+        @include xsmobile {
+          flex-direction: column;
+          justify-content: space-around;
+          align-items: center;
+          gap: 1em;
+          margin-top: 1em;
+        }
         &__list {
           width: 20%;
           display: -webkit-box;
@@ -286,14 +412,29 @@
           -webkit-box-pack: center;
           -ms-flex-pack: center;
           justify-content: center;
+          flex-wrap: wrap;
+          div {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+          }
           @include lores {
+            flex-direction: row;
+            width: 100%;
+          }
+          @include mobile {
+            flex-direction: row;
+            width: 100%;
+          }
+          @include xsmobile {
             flex-direction: row;
             width: 100%;
           }
           img {
             width: 22%;
             @include lores {
-              width: 8%;
+              width: 25%;
             }
           }
         }
@@ -306,12 +447,19 @@
           -webkit-box-direction: normal;
           -ms-flex-direction: row;
           flex-direction: row;
+          flex-wrap: wrap;
           -webkit-box-align: center;
           -ms-flex-align: center;
           align-items: center;
           -ms-flex-pack: distribute;
           justify-content: space-around;
           @include lores {
+            width: 100%;
+          }
+          @include mobile {
+            width: 100%;
+          }
+          @include xsmobile {
             width: 100%;
           }
           h6 {
@@ -322,8 +470,16 @@
               font-size: 24px;
             }
             @include lores {
-              font-size: 22px;
+              font-size: 20px;
               font-weight: 500;
+            }
+            @include mobile {
+              font-size: 16px;
+              font-weight: 400;
+            }
+            @include xsmobile {
+              font-size: 14px;
+              font-weight: 400;
             }
           }
         }
@@ -337,11 +493,27 @@
     margin: 25px 0;
     display: flex;
     flex-direction: row;
+    @include mobile {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    @include xsmobile {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
     &__list {
       width: 100%;
       display: flex;
       flex-direction: column;
       margin-bottom: 25px;
+      @include mobile {
+        align-items: center;
+      }
+      @include xsmobile {
+        align-items: center;
+      }
       .seeMore {
         color: $primaryColor;
         width: fit-content;
@@ -378,11 +550,19 @@
             flex-direction: column;
             border: solid 2px $primaryColor;
             background-color: $primaryColor;
-            margin: 0 25px 25px 0;
+            margin: 1em;
             -webkit-transition: all 100ms ease-in-out;
             -o-transition: all 100ms ease-in-out;
             transition: all 100ms ease-in-out;
             overflow: hidden;
+            @include mobile {
+              width: 120px;
+              height: 240px;
+            }
+            @include xsmobile {
+              width: 100px;
+              height: 200px;
+            }
             &__profile {
               width: 100%;
               height: 220px;
@@ -414,6 +594,12 @@
               @include lores {
                 font-size: 16px;
               }
+              @include mobile {
+                font-size: 16px;
+              }
+              @include xsmobile {
+                font-size: 14px;
+              }
             }
             &__character {
               margin: 5px 5px 0 5px;
@@ -429,6 +615,12 @@
               }
               @include lores {
                 font-size: 14px;
+              }
+              @include mobile {
+                font-size: 14px;
+              }
+              @include xsmobile {
+                font-size: 12px;
               }
             }
           }
@@ -450,6 +642,7 @@
   &__media {
     width: 100%;
     padding: 0 15px;
+    background-color: $backgroundColor;
     margin: 25px 0;
     display: flex;
     flex-direction: column;
@@ -458,13 +651,28 @@
       display: flex;
       flex-direction: column;
       margin-bottom: 22%;
+      @include lores {
+        margin-bottom: 48%;
+      }
+      @include mobile {
+        margin-bottom: 48%;
+      }
+      @include xsmobile {
+        margin-bottom: 48%;
+      }
       &__tabsBlock {
         width: 100%;
         display: flex;
-        height: 2em;
+        height: 2.5em;
         flex-direction: row;
         justify-content: space-between;
         background-color: $primaryColor;
+        @include mobile {
+          height: 4em;
+        }
+        @include xsmobile {
+          height: 4em;
+        }
         &__tab {
           width: 25%;
           display: flex;
@@ -477,6 +685,22 @@
           font-size: 20px;
           font-weight: 400;
           transition: all 70ms linear;
+          @include lores {
+            font-size: 18px;
+            font-weight: 300;
+          }
+          @include mobile {
+            width: 30%;
+            font-size: 16px;
+            font-weight: 300;
+            text-align: center;
+          }
+          @include xsmobile {
+            width: 30%;
+            font-size: 14px;
+            font-weight: 300;
+            text-align: center;
+          }
           &:hover {
             cursor: pointer;
             background-color: $backgroundColor;
@@ -488,6 +712,20 @@
             font-weight: 600;
             background-color: $backgroundColor;
             color: $primaryColor;
+            @include lores {
+              font-size: 22px;
+              font-weight: 500;
+            }
+            @include mobile {
+              width: 40%;
+              font-size: 20px;
+              font-weight: 400;
+            }
+            @include xsmobile {
+              width: 40%;
+              font-size: 18px;
+              font-weight: 400;
+            }
           }
         }
       }
@@ -502,6 +740,15 @@
           left: 5%;
           font-size: 18px;
           font-weight: 400;
+          @include lores {
+            font-size: 16px;
+          }
+          @include mobile {
+            font-size: 14px;
+          }
+          @include xsmobile {
+            font-size: 12px;
+          }
         }
         p {
           color: $primaryColor;
@@ -514,6 +761,15 @@
           left: 5%;
           font-size: 18px;
           font-weight: 400;
+          @include lores {
+            font-size: 16px;
+          }
+          @include mobile {
+            font-size: 14px;
+          }
+          @include xsmobile {
+            font-size: 12px;
+          }
           a {
             display: flex;
             flex-direction: row;
@@ -525,12 +781,30 @@
             color: white;
             transform: scale(1);
             transition: all 100ms linear;
+            @include lores {
+              font-size: 16px;
+            }
+            @include mobile {
+              font-size: 14px;
+            }
+            @include mobile {
+              font-size: 12px;
+            }
             &:hover {
               transform: scale(1.1);
             }
             i {
               color: red;
               font-size: 22px;
+              @include lores {
+                font-size: 18px;
+              }
+              @include mobile {
+                font-size: 16px;
+              }
+              @include xsmobile {
+                font-size: 14px;
+              }
             }
           }
         }
@@ -546,6 +820,18 @@
           left: 0;
           transition: all 70ms 50ms linear;
           background-color: $backgroundColor;
+          @include lores {
+            width: 100%;
+            padding-bottom: 50%;
+          }
+          @include mobile {
+            width: 100%;
+            padding-bottom: 50%;
+          }
+          @include xsmobile {
+            width: 100%;
+            padding-bottom: 50%;
+          }
           iframe {
             width: 100%;
             height: 100%;
@@ -592,6 +878,21 @@
           border: solid 3px $primaryColor;
           background-color: $backgroundColor;
           transition: all 70ms 50ms linear;
+          @include lores {
+            width: 100%;
+            padding-bottom: 50%;
+            left: 0;
+          }
+          @include mobile {
+            width: 100%;
+            padding-bottom: 50%;
+            left: 0;
+          }
+          @include xsmobile {
+            width: 100%;
+            padding-bottom: 50%;
+            left: 0;
+          }
           &__inactive {
             filter: blur(10px);
             z-index: -1;
@@ -606,6 +907,12 @@
             &:hover {
               cursor: pointer;
               box-shadow: 0px 0px 10px 2px $primaryColor;
+              @include mobile {
+                box-shadow: 0px 0px 5px 2px $primaryColor;
+              }
+              @include xsmobile {
+                box-shadow: 0px 0px 5px 2px $primaryColor;
+              }
               img {
                 transform: scale(1.2);
               }
@@ -651,6 +958,21 @@
           border: solid 3px $primaryColor;
           background-color: $backgroundColor;
           transition: all 70ms 50ms linear;
+          @include lores {
+            width: 100%;
+            padding-bottom: 50%;
+            left: 0;
+          }
+          @include mobile {
+            width: 100%;
+            padding-bottom: 50%;
+            left: 0;
+          }
+          @include xsmobile {
+            width: 100%;
+            padding-bottom: 50%;
+            left: 0;
+          }
           &__inactive {
             filter: blur(10px);
             z-index: -2;
@@ -662,9 +984,21 @@
             border: solid 2px $primaryColor;
             overflow: hidden;
             transition: box-shadow 100ms ease-in-out;
+            @include mobile {
+              width: 40%;
+            }
+            @include xsmobile {
+              width: 40%;
+            }
             &:hover {
               cursor: pointer;
               box-shadow: 0px 0px 10px 2px $primaryColor;
+              @include mobile {
+                box-shadow: 0px 0px 5px 2px $primaryColor;
+              }
+              @include xsmobile {
+                box-shadow: 0px 0px 5px 2px $primaryColor;
+              }
               img {
                 transform: scale(1.2);
               }
@@ -681,7 +1015,7 @@
     }
   }
   &__tmdbLink {
-    margin: 5em 0 -5em 3em;
+    margin: 5em 0 -3em 3em;
     width: 50%;
     color: white;
     font-size: 20px;
@@ -689,7 +1023,19 @@
       font-size: 14px;
     }
     @include lores {
+      width: 60%;
       font-size: 14px;
+      margin: 3em 0 -3em 3em;
+    }
+    @include mobile {
+      width: 70%;
+      font-size: 12px;
+      margin: 3em 0 -3em 3em;
+    }
+    @include xsmobile {
+      width: 80%;
+      font-size: 12px;
+      margin: 3em 0 -3em 2em;
     }
     font-weight: 500;
     display: flex;
@@ -705,7 +1051,13 @@
         width: 15%;
       }
       @include lores {
-        width: 15%;
+        width: 25%;
+      }
+      @include mobile {
+        width: 30%;
+      }
+      @include xsmobile {
+        width: 30%;
       }
       display: flex;
       flex-direction: row;
@@ -752,5 +1104,15 @@ h5 {
   @include lores {
     font-size: 24px;
     font-weight: 700;
+  }
+  @include mobile {
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 5px;
+  }
+  @include xsmobile {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 5px;
   }
 }
