--- a/src/app/view-image/view-image.component.scss
+++ b/src/app/view-image/view-image.component.scss
@@ -11,6 +11,9 @@
   @include smalldesk {
     padding: 12% 0;
   }
+  @include lores {
+    padding: 15% 0;
+  }
   &__buttons {
     align-self: flex-start;
     margin-top: 10%;
@@ -36,6 +39,9 @@
       transform: scale(1);
       @include smalldesk {
         transform: scale(0.8);
+      }
+      @include lores {
+        transform: scale(0.7);
       }
       i {
         font-size: 32px;
